+ settings dialog (needs debug)

--- a/RadarClient/RadarClient.vcxproj
+++ b/RadarClient/RadarClient.vcxproj
@@ -238,6 +238,14 @@ xcopy "$(SolutionDir)FreeImage\*.dll" "$(OutDir)" /d /y</Command>
     </ClCompile>
     <ClCompile Include="Util.cpp" />
     <ClCompile Include="CViewPortControl.cpp" />
+    <ClCompile Include="XColorSpectrumCtrl\rgbhsl.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="XColorSpectrumCtrl\XColorSpectrumCtrl.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C3DObjectProgram.h" />
@@ -274,6 +282,11 @@ xcopy "$(SolutionDir)FreeImage\*.dll" "$(OutDir)" /d /y</Command>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="CViewPortControl.h" />
+    <ClInclude Include="XColorSpectrumCtrl\CXDC.h" />
+    <ClInclude Include="XColorSpectrumCtrl\CXRect.h" />
+    <ClInclude Include="XColorSpectrumCtrl\CXToolTipCtrl.h" />
+    <ClInclude Include="XColorSpectrumCtrl\rgbhsl.h" />
+    <ClInclude Include="XColorSpectrumCtrl\XColorSpectrumCtrl.h" />
     <ClInclude Include="ZeeGrid.h" />
   </ItemGroup>
   <ItemGroup>
