--- a/Data/settings.json
+++ b/Data/settings.json
@@ -1,5 +1,5 @@
 {
-    "ColorBackground": "#12160fff",
+    "ColorBackground": "#0c0c17ff",
     "ColorAxis": "#feff1d7f",
     "ColorNumbers": "#b2b2b27f",
     "ColorPointLowLevel": "#666666ff",
@@ -8,8 +8,8 @@
     "ColorTrack": "#ff7f7fff",
     "ColorTrackSelected": "#7fff7fff",
     "ColorMeasureLine": "#ff0000ff",
-    "ColorAltitudeLowest": "#21d067ff",
-    "ColorAltitudeHighest": "#6a0505ff",
+    "ColorAltitudeLowest": "#011a03ff",
+    "ColorAltitudeHighest": "#3a311cff",
     "ColorBlindzoneLowest": "#ffffffff",
     "ColorBlindzoneHighest": "#000000ff",
     "ColorBlankZones": "#f92121ff",
@@ -26,7 +26,7 @@
     "IntMarkupMarkSize": "10",
     "IntMarkupHorizontalAxisCount": "18",
     "IntRayDensity": "1",
-    "FloatZeroElevation": "0.000000",
+    "FloatZeroElevation": "1.000000",
     "FloatCTrackRefresh_Kr": "0.750000",
     "FloatCTrackRefresh_a0": "-120.000000",
     "FloatCTrackRefresh_scale1": "0.020000",
@@ -46,20 +46,23 @@
     "FloatMaxBegAzm": "360.000000",
     "FloatMinZeroElevation": "0.000000",
     "FloatMaxZeroElevation": "90.000000",
-    "FloatPositionLon": "45.845001",
-    "FloatPositionLat": "42.400002",
+    "FloatPositionLon": "37.712955",
+    "FloatPositionLat": "55.994469",
     "IntResolution": "100",
     "IntTexSize": "800",
     "FloatMPPh": "5.000000",
     "FloatMPPv": "5.000000",
     "IntNazm": "8192",
-    "StringCSectorPaletteFileName": "rimagecolor.png",
-    "StringCRImagePaletteFileName": "rpointcolor.png",
+    "StringCSectorPaletteFileName": "rpointcolor.png",
+    "StringCRImagePaletteFileName": "rimagecolor.png",
     "FloatCRImageMinAmp": "0.000000",
     "FloatCRImageMaxAmp": "255.000000",
     "FloatCSectorMinAmp": "0.000000",
     "FloatCSectorMaxAmp": "255.000000",
     "IntConnectionTimeout": "10",
     "FloatPositionRadarHeight": "1.500000",
-    "FloatMaxDist": "7143.750000"
+    "FloatMaxDist": "7143.750000",
+    "ColorMarkup": "#29c3d57f",
+  "ColorMarkupInvisible": "#850c8cff",
+    "IntPointLifetime":  "3"
 }
