RLI coloring done

--- a/Data/settings.json
+++ b/Data/settings.json
@@ -1,68 +1,74 @@
 {
-    "ColorBackground": "#0c0c17ff",
-    "ColorAxis": "#feff1d7f",
-    "ColorNumbers": "#b2b2b27f",
-    "ColorPointLowLevel": "#666666ff",
-    "ColorPointHighLevel": "#ffffffff",
-    "ColorPointSelected": "#7fff7fff",
-    "ColorTrack": "#ff7f7fff",
-    "ColorTrackSelected": "#7fff7fff",
-    "ColorMeasureLine": "#ff0000ff",
-    "ColorAltitudeLowest": "#011a03ff",
-    "ColorAltitudeHighest": "#3a311cff",
-    "ColorBlindzoneLowest": "#ffffffff",
-    "ColorBlindzoneHighest": "#000000ff",
-    "ColorBlankZones": "#f92121ff",
-    "FloatMinAltitude": "50.000000",
-    "FloatMaxAltitude": "250.000000",
-    "FloatMaxDistance": "7000.000000",
-    "FloatBlankR1": "120.000000",
-    "FloatBlankR2": "6500.000000",
-    "IntMinimapTextureSize": "800",
-    "IntMarkupMarksPerCircle": "10",
-    "IntMarkupSegmentsPerCircle": "1000",
-    "IntMarkupNumCircles": "7",
-    "IntMarkupMarkDistance": "100",
-    "IntMarkupMarkSize": "10",
-    "IntMarkupHorizontalAxisCount": "18",
-    "IntRayDensity": "1",
-    "FloatZeroElevation": "1.000000",
-    "FloatCTrackRefresh_Kr": "0.750000",
-    "FloatCTrackRefresh_a0": "-120.000000",
-    "FloatCTrackRefresh_scale1": "0.020000",
-    "FloatCTrackRefresh_scale2": "1000.000000",
-    "FloatCTrackRefresh_e0": "0.000000",
-    "FloatCTrackRefresh_scale3": "1.000000",
-    "IntPointColorThreshold_00": "400",
-    "IntPointColorThreshold_01": "1000",
-    "IntPointColorThreshold_02": "2500",
-    "ColorPointColor_00": "#4c4c4cff",
-    "ColorPointColor_01": "#7f7f7fff",
-    "ColorPointColor_02": "#999999ff",
-    "ColorPointColor_03": "#ccccccff",
-    "StringHostName": "localhost",
-    "IntPort": "10001",
-    "FloatMinBegAzm": "0.000000",
-    "FloatMaxBegAzm": "360.000000",
-    "FloatMinZeroElevation": "0.000000",
-    "FloatMaxZeroElevation": "90.000000",
-    "FloatPositionLon": "37.712955",
-    "FloatPositionLat": "55.994469",
-    "IntResolution": "100",
-    "IntTexSize": "800",
-    "FloatMPPh": "5.000000",
-    "FloatMPPv": "5.000000",
-    "IntNazm": "8192",
-    "StringCSectorPaletteFileName": "rpointcolor.png",
-    "StringCRImagePaletteFileName": "rimagecolor.png",
-    "FloatCRImageMinAmp": "0.000000",
-    "FloatCRImageMaxAmp": "255.000000",
-    "FloatCSectorMinAmp": "0.000000",
-    "FloatCSectorMaxAmp": "255.000000",
-    "IntConnectionTimeout": "10",
-    "FloatPositionRadarHeight": "1.500000",
-    "FloatMaxDist": "7143.750000",
-    "ColorMarkup": "#29c3d57f",
-  "ColorMarkupInvisible": "#850c8cff",
-    "IntPointLifetime":  "3"
+  "ColorAltitudeHighest": "#16130bff",
+  "ColorAltitudeLowest": "#000000ff",
+  "ColorAxis": "#feff1d7f",
+  "ColorBackground": "#0c0c17ff",
+  "ColorBlankZones": "#f92121ff",
+  "ColorBlindzoneHighest": "#000000ff",
+  "ColorBlindzoneLowest": "#ffffffff",
+  "ColorMarkup": "#26d8b07f",
+  "ColorMarkupInvisible": "#7c8809ff",
+  "ColorMeasureLine": "#ff0000ff",
+  "ColorNumbers": "#b2b2b27f",
+  "ColorPointColor_00": "#4c4c4cff",
+  "ColorPointColor_01": "#7f7f7fff",
+  "ColorPointColor_02": "#999999ff",
+  "ColorPointColor_03": "#ccccccff",
+  "ColorPointHighLevel": "#ffffffff",
+  "ColorPointLowLevel": "#666666ff",
+  "ColorPointSelected": "#7fff7fff",
+  "ColorTrack": "#ff7f7fff",
+  "ColorTrackSelected": "#7fff7fff",
+  "FloatAmp_00": "0.0",
+  "FloatAmp_01": "4000.0",
+  "FloatAmp_02": "100000.0",
+  "FloatAmpPalettePosition_00": "0.25",
+  "FloatAmpPalettePosition_01": "0.45",
+  "FloatAmpPalettePosition_02": "0.85",
+  "FloatBlankR1": "120.000000",
+  "FloatBlankR2": "6500.000000",
+  "FloatCRImageMaxAmp": "255.000000",
+  "FloatCRImageMinAmp": "0.000000",
+  "FloatCSectorMaxAmp": "255.000000",
+  "FloatCSectorMinAmp": "0.000000",
+  "FloatCTrackRefresh_a0": "-120.000000",
+  "FloatCTrackRefresh_e0": "0.000000",
+  "FloatCTrackRefresh_Kr": "0.750000",
+  "FloatCTrackRefresh_scale1": "0.020000",
+  "FloatCTrackRefresh_scale2": "1000.000000",
+  "FloatCTrackRefresh_scale3": "1.000000",
+  "FloatMaxAltitude": "250.000000",
+  "FloatMaxBegAzm": "360.000000",
+  "FloatMaxDist": "7143.750000",
+  "FloatMaxDistance": "7000.000000",
+  "FloatMaxZeroElevation": "90.000000",
+  "FloatMinAltitude": "50.000000",
+  "FloatMinBegAzm": "0.000000",
+  "FloatMinZeroElevation": "0.000000",
+  "FloatMPPh": "5.000000",
+  "FloatMPPv": "5.000000",
+  "FloatPositionLat": "55.994469",
+  "FloatPositionLon": "37.712955",
+  "FloatPositionRadarHeight": "1.500000",
+  "FloatZeroElevation": "1.000000",
+  "IntConnectionTimeout": "10",
+  "IntMarkupHorizontalAxisCount": "18",
+  "IntMarkupMarkDistance": "100",
+  "IntMarkupMarkSize": "10",
+  "IntMarkupMarksPerCircle": "10",
+  "IntMarkupNumCircles": "7",
+  "IntMarkupSegmentsPerCircle": "1000",
+  "IntMinimapTextureSize": "800",
+  "IntNazm": "8192",
+  "IntPointColorThreshold_00": "400",
+  "IntPointColorThreshold_01": "1000",
+  "IntPointColorThreshold_02": "2500",
+  "IntPointLifetime": "3",
+  "IntPort": "10001",
+  "IntRayDensity": "1",
+  "IntResolution": "100",
+  "IntTexSize": "800",
+  "StringCRImagePaletteFileName": "rimagecolor.png",
+  "StringCSectorPaletteFileName": "rpointcolor.png",
+  "StringHostName": "localhost"
 }
